--- a/kafka-utils/pom.xml
+++ b/kafka-utils/pom.xml
@@ -45,6 +45,25 @@
       <version>2.3.0</version>
     </dependency>
 
+    <dependency>
+      <groupId>com.brokencircuits</groupId>
+      <artifactId>core</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.brokencircuits</groupId>
+      <artifactId>schemas</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <repositories>
